examples/invalid/not_declared/params.vbr
track f(x: whole, y: quarter): quarter {
    if (x) {
        2*y||
    } else {
        y||
    }
}

moderato() {
    |>(play f with (a + b, 10))|
}